--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://js.radar.com/v3.6.1/radar.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
