--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,6 +39,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- Radar likrary - geocoding -->
     <script src="https://js.radar.com/v3.6.1/radar.min.js"></script>
     <div id="root"></div>
     <!--
